# Can-Transformation

./: README.md
devel/: .catkin
devel/lib/pkgconfig/: robotics_module1.pc
devel/lib/robotics_module1/: can10_demo  can11_demo  can12_demo  can1_demo  can2_demo  can3_demo  can4_demo  can5_demo  can6_demo  can7_demo  can8_demo  can9_demo  can_rotation_demo  can_transformation_demo  my_controller  my_robot  object_rotation_demo  setup_table  setup_table_v2  spawn_object_demo  turtlebot_rotation_demo
devel/share/robotics_module1/cmake/: robotics_module1Config.cmake
src/robotics_module1a/: CMakeLists.txt
src/robotics_module1a/include/: robotics_module1.txt
src/robotics_module1a/launch/: module1.launch
src/robotics_module1a/src/: can_transformation.cpp  module1_positions.cpp  module1_rotations.cpp  pose_publisher.cpp  pose_subscriber.cpp  rotate_can_example.cpp  rotate_turtlebot.cpp  setup_table.cpp  setup_table_v2.cpp
src/robotics_module1a/worlds/: assignment1.world
